--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng-env-example": {
+    "ng-env-vars": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ng-env-example",
+            "outputPath": "dist/ng-env-vars",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,10 +66,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ng-env-example:build:production"
+              "browserTarget": "ng-env-vars:build:production"
             },
             "development": {
-              "browserTarget": "ng-env-example:build:development"
+              "browserTarget": "ng-env-vars:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -77,7 +77,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-env-example:build"
+            "browserTarget": "ng-env-vars:build"
           }
         },
         "test": {
@@ -101,5 +101,5 @@
       }
     }
   },
-  "defaultProject": "ng-env-example"
+  "defaultProject": "ng-env-vars"
 }
